@@ -1,3 +1,8 @@
+2013-01-09  Jan Hubicka  <jh@suse.cz>
+
+	PR tree-optimization/55569
+	* gcc.c-torture/compile/pr55569.c: New testcase.
+
 2013-01-09  Mikael Morin  <mikael@gcc.gnu.org>
 
 	PR fortran/47203
